--- a/runsmartProject/src/index.html
+++ b/runsmartProject/src/index.html
@@ -7,10 +7,14 @@
     <link rel="stylesheet" href="css/bootstrap-reboot.min.css">
     <link rel="stylesheet" href="css/font.css">
     <link rel="stylesheet" href="css/slick.css"/>
+    <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
     <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-    <section class="promo">
+    <section id="up" class="promo">
         <div class="container">
             <header class="header">
                 <a href="#" class="header__logo">
@@ -51,7 +55,7 @@
                 <button data-modal="consultation" class="button button_main">заказать кОНСУЛЬТАЦИЮ</button>
                 <div class="promo__link">
                     или
-                    <a href="#">ПЕРЕЙТИ В КАТАЛОГ</a>
+                    <a href="#catalog">ПЕРЕЙТИ В КАТАЛОГ</a>
                 </div>
             </div>
             
@@ -62,24 +66,24 @@
         <div class="container">
             <h2 class="title">НАШИ ПРЕИМУЩЕСТВА</h2>
             <div class="advantages__wrapper">
-                <div class="advantages__icon">
-                    <img src="icons/second_screen/cup_logo.png" alt="cup">
+                <div class="advantages__item">
+                    <img src="icons/second_screen/cup_logo.png" alt="cup" class="advantages__icon">
                     <div class="advantages__subtitle">Делимся опытом</div>
                     <div class="advantages__descr">
                         Наши сотрудники всегда готовы поделиться своим опытом,<br> 
                         так как сами бегают полумарафоны, переплыли Босфор, готовятся к соревнованиям по триатлону!
                     </div>   
                 </div>
-                <div class="advantages__icon">
-                    <img src="icons/second_screen/heart_logo.png" alt="heart">
+                <div class="advantages__item">
+                    <img src="icons/second_screen/heart_logo.png" alt="heart" class="advantages__icon advantages__icon_animated">
                     <div class="advantages__subtitle">Заботимся о здоровье</div>
                     <div class="advantages__descr">
                         Мы работаем для того,<br> 
                         чтобы Ваши занятия спортом шли на пользу Вашему здоровью и были в радость Вам и Вашим близким!
                     </div>
                 </div>
-                <div class="advantages__icon">
-                    <img src="icons/second_screen/shoe_logo.png" alt="shoe">
+                <div class="advantages__item">
+                    <img src="icons/second_screen/shoe_logo.png" alt="shoe" class="advantages__icon">
                     <div class="advantages__subtitle">Учим бегать</div>
                     <div class="advantages__descr">
                         Помогаем с обучением<br> 
@@ -125,7 +129,7 @@
         </div>
     </section>
 
-    <section class="catalog">
+    <section id="catalog" class="catalog">
         <div class="container">
             <h2 class="title">Каталог пульсометров</h2>
             <ul class="catalog__tabs">
@@ -397,7 +401,7 @@
     <section class="feed">
         <div class="container">
             <div class="title">отзывы клиентов</div>
-            <div class="feed__item">
+            <div class="feed__item wow animate__animated animate__fadeInUp" data-wow-duration="1s" data-wow-delay="0.5s">
                 <img src="img/feed/1feed.png" alt="feed" class="feed__img">
                 <div class="feed__text">
                     <div class="feed__subtitle">Ирина Иванченко</div>
@@ -412,7 +416,7 @@
                 </div>
             </div>
             <hr>
-            <div class="feed__item">
+            <div class="feed__item wow animate__animated animate__fadeInUp" data-wow-duration="1s" data-wow-delay="0.5s">
                 <img src="img/feed/2feed.png" alt="feed" class="feed__img">
                 <div class="feed__text">
                     <div class="feed__subtitle">Иван Сёмочкин</div>
@@ -425,7 +429,7 @@
                 </div>
             </div>
             <hr>
-            <div class="feed__item">
+            <div class="feed__item wow animate__animated animate__fadeInUp" data-wow-duration="1s" data-wow-delay="0.5s">
                 <img src="img/feed/3feed.png" alt="feed" class="feed__img">
                 <div class="feed__text">
                     <div class="feed__subtitle">Юлия Дашкина</div>
@@ -488,11 +492,16 @@
         </div>
     </div>
 
+    <a href="#up" class="pageup">
+        <img src="icons/chevron-circle-up-solid.svg" alt="up">
+    </a>
+
     <script type="text/javascript" src="https://code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="https://code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script src="js/slick.min.js"></script>
     <script src="js/jquery.validate.min.js"></script>
     <script src="js/jquery.maskedinput.min.js"></script>
+    <script src="js/wow.min.js"></script>
     <script src="js/script.js"></script>
 </body>
 </html>
