--- a/portfolio/src/index.html
+++ b/portfolio/src/index.html
@@ -176,7 +176,7 @@
 
     <section class="resume">
         <div class="container">
-            <div class="h2 title title_fz16 resume__title">Опыт</div>
+            <h2 class="title title_fz16 resume__title">Опыт</h2>
             <div class="title title_fz36 resume__subtitle">Чем я буду полезна</div>
             <div class="divider"></div>
 
@@ -240,6 +240,111 @@
                     </ul>
                 </div>
             </div>
+    </section>
+
+    <section class="skill">
+        <div class="container">
+            <h2 class="title title_fz16 skill__title">Навыки</h2>
+            <div class="title title_fz36 skill__subtitle">Что я использую в работе</div>
+            <div class="divider"></div>
+
+            <div class="skill__items">
+                <div class="skill__item">
+                    <div class="skill__item-img">
+                        <img src="icons/skills/html5.svg" alt="html">
+                    </div>
+                    <h3 class="title title_fz14">HTML5</h3>
+                    <p>Именно он создает каркас вашего сайта или приложения, а пятая версия позволит мне создавать более SEO-оптимизированную структуру вашего продукта</p>
+                </div>
+                <div class="skill__item">
+                    <div class="skill__item-img">
+                        <img src="icons/skills/css3.svg" alt="css">
+                    </div>
+                    <h3 class="title title_fz14">CSS3</h3>
+                    <p>Этот язык стилей позволяет мне создавать абсолютно любой внешний вид вашего сайта или приложения. Все ограничивается только вашей фантазией!</p>
+                </div>
+                <div class="skill__item">
+                    <div class="skill__item-img">
+                        <img src="icons/skills/js.svg" alt="js"">
+                    </div>
+                    <h3 class="title title_fz14">Java Script</h3>
+                    <p>Этот язык программирования позволяет оживить все что угодно: слайдеры, окна, подсказки, вкладки, получение данных от сервера и многое другое</p>
+                </div>
+                <div class="skill__item">
+                    <div class="skill__item-img">
+                        <img src="icons/skills/jquery.svg" alt="jquery">
+                    </div>
+                    <h3 class="title title_fz14">Jquery</h3>
+                    <p>Библиотека Jquery позволит ускорить разработку. Без необходимости интегрировать в проект мы её не будем, но навык работы с ней присутствует</p>
+                </div>
+                <div class="skill__item">
+                    <div class="skill__item-img">
+                        <img src="icons/skills/react.svg" alt="react"">
+                    </div>
+                    <h3 class="title title_fz14">React</h3>
+                    <p>Эта библиотека позволяет создавать web-приложения. Мы можем создать максимально интерактивный продукт именно под ваши цели</p>
+                </div>
+                <div class="skill__item">
+                    <div class="skill__item-img">
+                        <img src="icons/skills/node.js.svg" alt="node.js"">
+                    </div>
+                    <h3 class="title title_fz14">Node.js</h3>
+                    <p>Эта платформа позволяет создавать бэкенд для вашего продукта - “мозги”, которые будут выполнять действия, которые пользователь не видит</p>
+                </div>
+                <div class="skill__item">
+                    <div class="skill__item-img">
+                        <img src="icons/skills/mongo.db.svg" alt="mongo.db"">
+                    </div>
+                    <h3 class="title title_fz14">Mongo.db</h3>
+                    <p>Это нереляционная база данных, которая будет хранить данные вашего сайта или приложения</p>
+                </div>
+            </div>
+
+            <div class="skill__rating">
+                <div class="skill__rating-item">
+                    <div class="title title_fz14 skill__rating-title">Создание сайтов</div>
+                    <div class="skill__rating-counter">100%</div>
+                    <div class="skill__rating-line">
+                        <span style="width: 100%"></span>
+                    </div>
+                </div>
+                <div class="skill__rating-item">
+                    <div class="title title_fz14 skill__rating-title">Создание приложений</div>
+                    <div class="skill__rating-counter">85%</div>
+                    <div class="skill__rating-line">
+                        <span style="width: 85%"></span>
+                    </div>
+                </div>
+                <div class="skill__rating-item">
+                    <div class="title title_fz14 skill__rating-title">Работа с данными</div>
+                    <div class="skill__rating-counter">90%</div>
+                    <div class="skill__rating-line">
+                        <span style="width: 90%"></span>
+                    </div>
+                </div>
+                <div class="skill__rating-item">
+                    <div class="title title_fz14 skill__rating-title">Креативность</div>
+                    <div class="skill__rating-counter">75%</div>
+                    <div class="skill__rating-line">
+                        <span style="width: 75%"></span>
+                    </div>
+                </div>
+                <div class="skill__rating-item">
+                    <div class="title title_fz14 skill__rating-title">Создание дизайна</div>
+                    <div class="skill__rating-counter">90%</div>
+                    <div class="skill__rating-line">
+                        <span style="width: 90%"></span>
+                    </div>
+                </div>
+                <div class="skill__rating-item">
+                    <div class="title title_fz14 skill__rating-title">Soft skills</div>
+                    <div class="skill__rating-counter">95%</div>
+                    <div class="skill__rating-line">
+                        <span style="width: 95%"></span>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
 
     <script src="js/scripts.js"></script>
