--- a/portfolio/src/index.html
+++ b/portfolio/src/index.html
@@ -305,42 +305,42 @@
                     <div class="title title_fz14 skill__rating-title">Создание сайтов</div>
                     <div class="skill__rating-counter">100%</div>
                     <div class="skill__rating-line">
-                        <span style="width: 100%"></span>
+                        <span></span>
                     </div>
                 </div>
                 <div class="skill__rating-item">
                     <div class="title title_fz14 skill__rating-title">Создание приложений</div>
                     <div class="skill__rating-counter">85%</div>
                     <div class="skill__rating-line">
-                        <span style="width: 85%"></span>
+                        <span></span>
                     </div>
                 </div>
                 <div class="skill__rating-item">
                     <div class="title title_fz14 skill__rating-title">Работа с данными</div>
                     <div class="skill__rating-counter">90%</div>
                     <div class="skill__rating-line">
-                        <span style="width: 90%"></span>
+                        <span></span>
                     </div>
                 </div>
                 <div class="skill__rating-item">
                     <div class="title title_fz14 skill__rating-title">Креативность</div>
                     <div class="skill__rating-counter">75%</div>
                     <div class="skill__rating-line">
-                        <span style="width: 75%"></span>
+                        <span></span>
                     </div>
                 </div>
                 <div class="skill__rating-item">
                     <div class="title title_fz14 skill__rating-title">Создание дизайна</div>
                     <div class="skill__rating-counter">90%</div>
                     <div class="skill__rating-line">
-                        <span style="width: 90%"></span>
+                        <span></span>
                     </div>
                 </div>
                 <div class="skill__rating-item">
                     <div class="title title_fz14 skill__rating-title">Soft skills</div>
                     <div class="skill__rating-counter">95%</div>
                     <div class="skill__rating-line">
-                        <span style="width: 95%"></span>
+                        <span></span>
                     </div>
                 </div>
             </div>
