--- a/portfolio/src/index.html
+++ b/portfolio/src/index.html
@@ -176,8 +176,8 @@
 
     <section class="resume">
         <div class="container">
-            <h2 class="title title_fz16 resume__title">Опыт</h2>
-            <div class="title title_fz36 resume__subtitle">Чем я буду полезна</div>
+            <h2 class="title title_fz16 title__section-title">Опыт</h2>
+            <div class="title title_fz36 title__section-subtitle">Чем я буду полезна</div>
             <div class="divider"></div>
 
             <div class="resume__wrapper">
@@ -244,8 +244,8 @@
 
     <section class="skill">
         <div class="container">
-            <h2 class="title title_fz16 skill__title">Навыки</h2>
-            <div class="title title_fz36 skill__subtitle">Что я использую в работе</div>
+            <h2 class="title title_fz16 title__section-title">Навыки</h2>
+            <div class="title title_fz36 title__section-subtitle">Что я использую в работе</div>
             <div class="divider"></div>
 
             <div class="skill__items">
@@ -343,6 +343,35 @@
                         <span></span>
                     </div>
                 </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="portfolio">
+        <div class="container">
+            <div class="title title_fz16 title__section-title">Портфолио</div>
+            <div class="title title_fz36 title__section-subtitle">Мои работы</div>
+            <div class="divider"></div>
+
+            <div class="portfolio__wrapper">
+                <a href="/uber" class="portfolio__item">
+                    <img src="img/works/uber.jpg" alt="uber">
+                </a>
+                <a href="/pulse" class="portfolio__item">
+                    <img src="img/works/pulse.jpg" alt="pulse">
+                </a>
+                <a href="#" class="portfolio__item">
+                    <img src="img/works/bread.jpg" alt="bread">
+                </a>
+                <a href="#" class="portfolio__item vertical">
+                    <img src="img/works/plans.jpg" alt="plans">
+                </a>
+                <a href="#" class="portfolio__item">
+                    <img src="img/works/ipad.jpg" alt="ipad">
+                </a>
+                <a href="#" class="portfolio__item horizontal">
+                    <img src="img/works/mac.jpg" alt="mac">
+                </a>
             </div>
         </div>
     </section>
