--- a/portfolio/src/index.html
+++ b/portfolio/src/index.html
@@ -349,7 +349,7 @@
 
     <section class="portfolio">
         <div class="container">
-            <div class="title title_fz16 title__section-title">Портфолио</div>
+            <h2 class="title title_fz16 title__section-title">Портфолио</h2>
             <div class="title title_fz36 title__section-subtitle">Мои работы</div>
             <div class="divider"></div>
 
@@ -372,6 +372,46 @@
                 <a href="#" class="portfolio__item horizontal">
                     <img src="img/works/mac.jpg" alt="mac">
                 </a>
+            </div>
+        </div>
+    </section>
+
+    <section class="price">
+        <div class="container">
+            <h2 class="title title_fz16 title__section-title">Прайс-лист</h2>
+            <div class="divider"></div>
+
+            <div class="price__wrapper">
+                <div class="price__item">
+                    <div class="price__title">Landing-page</div>
+                    <div class="price__cost">от 8000 руб.</div>
+                    <div class="price__descr">Одностраничный сайт для презентации услуг/товаров/...</div>
+                </div>
+                <div class="price__item">
+                    <div class="price__title">Web-приложение</div>
+                    <div class="price__cost">от 28000 руб.</div>
+                    <div class="price__descr">Приложение внутри браузера для лучшего комфорта</div>
+                </div>
+                <div class="price__item">
+                    <div class="price__title">Корпоративный сайт</div>
+                    <div class="price__cost">от 20000 руб.</div>
+                    <div class="price__descr">Сайт для вашего бизнеса или компании</div>
+                </div>
+                <div class="price__item">
+                    <div class="price__title">Android/IOS Приложение</div>
+                    <div class="price__cost">от 25000 руб.</div>
+                    <div class="price__descr">Приложение для смартфона любой ОС</div>
+                </div>
+                <div class="price__item">
+                    <div class="price__title">Интернет-магазин</div>
+                    <div class="price__cost">от 30000 руб.</div>
+                    <div class="price__descr">Инструмент для ваших продаж в сети</div>
+                </div>
+                <div class="price__item">
+                    <div class="price__title">Дизайн</div>
+                    <div class="price__cost">Индивидуально</div>
+                    <div class="price__descr">Создам дизайн для вашего сайта/приложения...</div>
+                </div>
             </div>
         </div>
     </section>
