Mobile adaptive two screen

--- a/portfolio/src/index.html
+++ b/portfolio/src/index.html
@@ -174,7 +174,7 @@
         </div>
     </section>
 
-    <section class="resume">
+    <!-- <section class="resume">
         <div class="container">
             <h2 class="title title_fz16 title__section-title">Опыт</h2>
             <div class="title title_fz36 title__section-subtitle">Чем я буду полезна</div>
@@ -240,9 +240,9 @@
                     </ul>
                 </div>
             </div>
-    </section>
+    </section> -->
 
-    <section class="skill">
+    <!-- <section class="skill">
         <div class="container">
             <h2 class="title title_fz16 title__section-title">Навыки</h2>
             <div class="title title_fz36 title__section-subtitle">Что я использую в работе</div>
@@ -345,9 +345,9 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
-    <section class="portfolio">
+    <!-- <section class="portfolio">
         <div class="container">
             <h2 class="title title_fz16 title__section-title">Портфолио</h2>
             <div class="title title_fz36 title__section-subtitle">Мои работы</div>
@@ -374,9 +374,9 @@
                 </a>
             </div>
         </div>
-    </section>
+    </section> -->
 
-    <section class="price">
+    <!-- <section class="price">
         <div class="container">
             <h2 class="title title_fz16 title__section-title">Прайс-лист</h2>
             <div class="divider"></div>
@@ -414,9 +414,9 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
-    <section class="contacts">
+    <!-- <section class="contacts">
         <div class="container">
             <div class="contacts__wrapper">
                 <div class="contacts__photo">
@@ -467,7 +467,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <script src="js/scripts.js"></script>
 </body>
