Mobile adaptive trird and fourth screen

--- a/portfolio/src/index.html
+++ b/portfolio/src/index.html
@@ -174,7 +174,7 @@
         </div>
     </section>
 
-    <!-- <section class="resume">
+    <section class="resume">
         <div class="container">
             <h2 class="title title_fz16 title__section-title">Опыт</h2>
             <div class="title title_fz36 title__section-subtitle">Чем я буду полезна</div>
@@ -240,9 +240,9 @@
                     </ul>
                 </div>
             </div>
-    </section> -->
+    </section>
 
-    <!-- <section class="skill">
+    <section class="skill">
         <div class="container">
             <h2 class="title title_fz16 title__section-title">Навыки</h2>
             <div class="title title_fz36 title__section-subtitle">Что я использую в работе</div>
@@ -345,7 +345,7 @@
                 </div>
             </div>
         </div>
-    </section> -->
+    </section>
 
     <!-- <section class="portfolio">
         <div class="container">
