Second screen with mobile adaptive

--- a/cuda/src/index.html
+++ b/cuda/src/index.html
@@ -34,5 +34,38 @@
         </div>
     </section>
 
+    <section class="about">
+        <div class="container">
+            <h2 class="about__title">SERVICES WE PROVIDE</h2>
+            <div class="divider"></div>
+            <div class="about__subtitle">We are working with both individuals and businesses from all over the globe<br> 
+                to create awesome websites and applications.
+            </div>
+            <div class="about__items">
+                <div class="about__item">
+                    <div class="about__item-img"><img src="icons/about/Flag icon.png" alt="flag"></div>
+                    <h3 class="about__item-title">Branding</h3>
+                    <p>Lorem ipsum dolor sit amet, 
+                        consectetuer adipiscing elit, sed diam nonummy nibh.</p>
+                </div>
+                <div class="about__item">
+                    <div class="about__item-img"><img src="icons/about/Crayon icon.png" alt="crayon"></div>
+                    <h3 class="about__item-title">Design</h3>
+                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem</p>
+                </div>
+                <div class="about__item">
+                    <div class="about__item-img"><img src="icons/about/Gears icon.png" alt="gears"></div>
+                    <h3 class="about__item-title">Development</h3>
+                    <p>At vero eos et accusamus et iusto odio dignissimos qui blanditiis praesentium.</p>
+                </div>
+                <div class="about__item">
+                    <div class="about__item-img"><img src="icons/about/Rocket icon.png" alt="rocket"></div>
+                    <h3 class="about__item-title">ROCKET SCIENCE</h3>
+                    <p>Et harum quidem rerum est et expedita distinctio. Nam libero tempore.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    
 </body>
 </html>
