Third screen with adaptive

--- a/cuda/src/index.html
+++ b/cuda/src/index.html
@@ -36,9 +36,9 @@
 
     <section class="about">
         <div class="container">
-            <h2 class="about__title">SERVICES WE PROVIDE</h2>
+            <h2 class="about__title title">SERVICES WE PROVIDE</h2>
             <div class="divider"></div>
-            <div class="about__subtitle">We are working with both individuals and businesses from all over the globe<br> 
+            <div class="about__subtitle subtitle">We are working with both individuals and businesses from all over the globe<br> 
                 to create awesome websites and applications.
             </div>
             <div class="about__items">
@@ -67,5 +67,62 @@
         </div>
     </section>
     
+    <section class="team">
+        <div class="container">
+            <h2 class="team__title title">MEET OUR BEAUTIFUL TEAM</h2>
+            <div class="divider"></div>
+            <div class="team__subtitle subtitle">We are a small team of designers and developers, who help brands with big ideas.</div>
+            <div class="team__items">
+                <div class="team__item">
+                    <div class="team__item-img"><img src="img/Base.png" alt="photo"></div>
+                    <h3 class="team__item-name">ANNE HATHAWAY</h3>
+                    <div class="team__item-position">CEO / Marketing Guru</div>
+                    <p>Lorem ipsum dolor sit amet, 
+                        consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna.</p>
+                    <div class="team__item-social">
+                        <a href="#" class="team__item-link"><img src="icons/social/Facebook Icon.png" alt="Facebook"></a>
+                        <a href="#" class="team__item-link"><img src="icons/social/Twitter.png" alt="Twitter"></a>
+                        <a href="#" class="team__item-link"><img src="icons/social/LinkedIn icon.png" alt="LinkedIn"></a>
+                        <a href="#" class="team__item-link"><img src="icons/social/Mail.png" alt="Mail"></a>
+                    </div>
+                </div>
+                <div class="team__item">
+                    <div class="team__item-img"><img src="img/Base.png" alt="photo"></div>
+                    <h3 class="team__item-name">Kate Upton</h3>
+                    <div class="team__item-position">Creative Director</div>
+                    <p>Duis aute irure dolor in in voluptate velit esse cillum dolore fugiat nulla pariatur. Excepteur sint occaecat non diam proident.</p>
+                    <div class="team__item-social">
+                        <a href="#" class="team__item-link"><img src="icons/social/Twitter.png" alt="Twitter"></a>
+                        <a href="#" class="team__item-link"><img src="icons/social/LinkedIn icon.png" alt="LinkedIn"></a>
+                        <a href="#" class="team__item-link"><img src="icons/social/Mail.png" alt="Mail"></a>
+                    </div>
+                </div>
+                <div class="team__item">
+                    <div class="team__item-img"><img src="img/Base.png" alt="photo"></div>
+                    <h3 class="team__item-name">Olivia Wilde</h3>
+                    <div class="team__item-position">Lead Designer</div>
+                    <p>Nemo enim ipsam voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem nesciunt.</p>
+                    <div class="team__item-social">
+                        <a href="#" class="team__item-link"><img src="icons/social/Facebook Icon.png" alt="Facebook"></a>
+                        <a href="#" class="team__item-link"><img src="icons/social/Twitter.png" alt="Twitter"></a>
+                        <a href="#" class="team__item-link"><img src="icons/social/LinkedIn icon.png" alt="LinkedIn"></a>
+                        <a href="#" class="team__item-link"><img src="icons/social/Mail.png" alt="Mail"></a>
+                    </div>
+                </div>
+                <div class="team__item">
+                    <div class="team__item-img"><img src="img/Base.png" alt="photo"></div>
+                    <h3 class="team__item-name">Ashley Greene</h3>
+                    <div class="team__item-position">SEO / Developer</div>
+                    <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam.</p>
+                    <div class="team__item-social">
+                        <a href="#" class="team__item-link"><img src="icons/social/Facebook Icon.png" alt="Facebook"></a>
+                        <a href="#" class="team__item-link"><img src="icons/social/Twitter.png" alt="Twitter"></a>
+                        <a href="#" class="team__item-link"><img src="icons/social/Mail.png" alt="Mail"></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 </body>
 </html>
